--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,8 +12,8 @@
       <div class="nav-wrapper">
         <a href="/" class="brand-logo left">NuHome</a>
         <ul class="right">
-          <li><a href="/chirp/new">whats this?</a></li>
-          <li><a href="/user/new">new patient</a></li>
+          <li><a href="/patients/new">whats this?</a></li>
+          <li><a href="drug/new">new patient</a></li>
         </ul>
     
       </div>
