--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,11 +9,12 @@
     <body>
          <header class="site-header">
     <nav>
-      <div class="nav-wrapper">
-        <a href="/" class="brand-logo left">NuHome</a>
-        <ul class="right">
-          <li><a href="/patients/new">whats this?</a></li>
-          <li><a href="drug/new">new patient</a></li>
+      <div class="nav-wrapper #00838f cyan darken-3">
+        <a href="/" class="brand-logo right">NuHome</a>
+        <ul class="left">
+          <li><a href="/views/nursinghome/show.hbs">Locations</a></li>
+          <li><a href="/views/patients/index.hbs">Patients</a></li>
+          <li><a href="/views/drugs/show.hbs">Medical Records</a></li>
         </ul>
     
       </div>
