--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,9 +12,9 @@
       <div class="nav-wrapper #00838f cyan darken-3">
         <a href="/" class="brand-logo right">NuHome</a>
         <ul class="left">
-          <li><a href="/views/nursinghome/show.hbs">Locations</a></li>
-          <li><a href="/views/patients/index.hbs">Patients</a></li>
-          <li><a href="/views/drugs/show.hbs">Medical Records</a></li>
+          <li><a href="/nursinghomes/show">Locations</a></li>
+          <li><a href="/patients/show">Patients</a></li>
+          <li><a href="/drugs/show">Medical Records</a></li>
         </ul>
     
       </div>
