changed the show and index pages a little bit

--- a/views/patients/show.hbs
+++ b/views/patients/show.hbs
@@ -1,6 +1,5 @@
-<h1>
-                TTHIS IS THE PATIENTS PAGE</h1>
-
+<h1>THIS IS THE PATIENTS PAGE</h1>
+{{#each nursinghomes.patients}}
       <div class="col s12 m8 offset-m2 l6 offset-l3">
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
@@ -14,3 +13,4 @@
           </div>
         </div>
       </div>
+      {{/each}}
