--- a/views/patients/show.hbs
+++ b/views/patients/show.hbs
@@ -14,3 +14,9 @@
         </div>
       </div>
       {{/each}}
+
+
+      //what am i doing here??? i want each patient to have a card with their picture and stats
+
+
+      //show is for individual patients
