fixed code and broke it again

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,9 +12,9 @@
       <div class="nav-wrapper #00838f cyan darken-3">
         <a href="/" class="brand-logo right">NuHome</a>
         <ul class="left">
-          <li><a href="/nursinghomes/show">Locations</a></li>
-          <li><a href="/patients/show">Patients</a></li>
-          <li><a href="/drugs/show">Medical Records</a></li>
+          <li><a href="/nursinghomes">Locations</a></li>
+          <li><a href="/patients">Patients</a></li>
+          <li><a href="/drugs">Medical Records</a></li>
         </ul>
     
       </div>
