--- a/views/nursinghome/show.hbs
+++ b/views/nursinghome/show.hbs
@@ -1,3 +1,4 @@
 <h1>THIS IS THE NURSING HOME SHOW PAGE!!!! WHOOO HOOOO!</h1>
 
-{{nursinghome}}
+{{nursinghome.name}}
+<p>{{nursinghome.security}}</p>
