fixed the show page to display correct info

--- a/views/nursinghome/show.hbs
+++ b/views/nursinghome/show.hbs
@@ -1,4 +1,4 @@
-<h1>THIS IS THE NURSING HOME SHOW PAGE!!!! WHOOO HOOOO!</h1>
+<h1>Home Information</h1>
 
 {{nursinghome.name}}
 <p>{{nursinghome.security}}</p>
