Fixed the drug create page

--- a/views/nursinghome/show.hbs
+++ b/views/nursinghome/show.hbs
@@ -1,4 +1,9 @@
 <h1>Home Information</h1>
 
-{{nursinghome.name}}
+<p>{{nursinghome.name}}</p>
+
+<p>{{nursinghome.location}}</p>
+
 <p>{{nursinghome.security}}</p>
+
+<p>{{nursinghome.petsAllowed}}</p>
