--- a/views/patients/show.hbs
+++ b/views/patients/show.hbs
@@ -4,7 +4,7 @@
         <div class="card-panel grey lighten-5 z-depth-1">
           <div class="row valign-wrapper">
             <div class="col s2">
-              <img src="https://i.pinimg.com/originals/54/42/e2/5442e25f6479af20d2f4b77c1c5ddf41.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+              <img src="https://images.unsplash.com/photo-1504778995644-77707b624d5a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5e03df0db2f9ec242b13651cbe7ce139&auto=format&fit=crop&w=800&q=60" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
             </div>
             <div class="col s10">
               <span class="black-text circle">Add the "circle" class to it to make it appear circular.
