fixed the issue with patients

--- a/views/nursinghome/show.hbs
+++ b/views/nursinghome/show.hbs
@@ -1,9 +1,26 @@
 <h1>Home Information</h1>
 
-<p>{{nursinghome.name}}</p>
 
-<p>{{nursinghome.location}}</p>
 
-<p>{{nursinghome.security}}</p>
+<div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="https://png.icons8.com/cotton/2x/novel.png"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <span class="black-text">
+                
+<p>Location Name: {{nursinghome.name}}</p>
 
-<p>{{nursinghome.petsAllowed}}</p>
+<p>Address: {{nursinghome.location}}</p>
+
+<p>Security Level:{{nursinghome.security}}</p>
+
+<p>Are Pets Allowed?{{nursinghome.petsAllowed}}</p>
+              
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
