--- a/views/patients/show.hbs
+++ b/views/patients/show.hbs
@@ -8,13 +8,13 @@
             <div class="col s10">
               <span class="black-text">
                 
-<p>First Name: {{patient.firstName}}</p>
-<p>Last Name: {{patient.lastName}}</p>
-<p>Age: {{patient.age}}</p>
-<p>Medical Conditions: {{patient.conditions}}</p>
-<p>Room Number: {{patient.roomNumber}}</p>
-<p>Pet Species: {{patient.pet}}</p>
-<p>Pet Name: {{patient.petName}}</p>
+<p>First Name: {{patients.firstName}}</p>
+<p>Last Name: {{patients.lastName}}</p>
+<p>Age: {{patients.age}}</p>
+<p>Medical Conditions: {{patients.conditions}}</p>
+<p>Room Number: {{patients.roomNumber}}</p>
+<p>Pet Species: {{patients.pet}}</p>
+<p>Pet Name: {{patients.petName}}</p>
               </span>
             </div>
           </div>
