added a picture to the index page

--- a/views/app/index.hbs
+++ b/views/app/index.hbs
@@ -1,3 +1,4 @@
 <section class="nuHome">
+    <center><img height="100" src="http://www.mtsummithomecare.com/mtsummithomecare_pics/happy_%20nurse_%20patients.jpg" alt=""></center>
 <p class="flow-text">I am Flow Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae fugiat libero maiores voluptates natus deleniti facilis aliquam dicta modi cumque laboriosam id, perferendis placeat ea quas minima saepe consequatur itaque.</p>
 </section>
